update and simplify Agular tutorial to reflect changes in recent versions of Angular and components-angular (#2173)
* update and simplify Agular tutorial to reflect changes in recent versions of Angular and components-angular

* format to spaces

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/developing/angular-tutorial/step-1.mdx
+++ b/src/pages/developing/angular-tutorial/step-1.mdx
@@ -16,8 +16,14 @@ Carbon components. By the end, these two methods will produce the same result.
 <AnchorLinks>
 
 <AnchorLink>Prerequisites</AnchorLink>
-<AnchorLink>Use starter app (recommended)</AnchorLink>
-<AnchorLink>Start from scratch</AnchorLink>
+<AnchorLink>Install Angular CLI</AnchorLink>
+<AnchorLink>Create an Angular App</AnchorLink>
+<AnchorLink>Install Carbon</AnchorLink>
+<AnchorLink>Run the app</AnchorLink>
+<AnchorLink>Add UI Shell</AnchorLink>
+<AnchorLink>Create pages</AnchorLink>
+<AnchorLink>Add routing</AnchorLink>
+<AnchorLink>Submit pull request</AnchorLink>
 
 </AnchorLinks>
 
@@ -111,137 +117,6 @@ git fetch upstream
 git checkout -b angular-step-1 upstream/angular-step-1
 ```
 
-## Use starter app (recommended)
-
-<AnchorLinks small>
-
-<AnchorLink>Add starter remote</AnchorLink>
-<AnchorLink>Pull starter code</AnchorLink>
-<AnchorLink>Remove starter remote</AnchorLink>
-<AnchorLink>Build and start</AnchorLink>
-<AnchorLink>Update UI Shell</AnchorLink>
-<AnchorLink>Create pages</AnchorLink>
-<AnchorLink>Add routing</AnchorLink>
-<AnchorLink>Submit pull request</AnchorLink>
-
-</AnchorLinks>
-
-### Add starter remote
-
-Add a temporary remote called `starter` so we can clone the
-[carbon-angular-starter](https://github.com/carbon-design-system/carbon-angular-starter).
-
-##### SSH:
-
-```bash
-git remote add starter git@github.com:carbon-design-system/carbon-angular-starter.git
-```
-
-Or, if you prefer to use HTTPS instead of SSH with your remotes:
-
-##### HTTPS:
-
-```bash
-git remote add starter https://github.com/carbon-design-system/carbon-angular-starter.git
-```
-
-### Pull starter code
-
-Now that we a have starter remote, we can rebase our branch to match whatever is
-in the starter app. Run the two commands:
-
-```bash
-git fetch starter
-git reset --hard starter/master
-```
-
-### Remove starter remote
-
-Remove the temporary remote called `starter` since we have no use for it
-anymore.
-
-```bash
-git remote remove starter
-```
-
-### Build and start
-
-We have the repository forked to your GitHub account, cloned down to your
-machine, and the starting branch checked out. Next, install the Carbon app's
-dependencies with:
-
-```bash
-npm install
-```
-
-After the dependencies are installed, you can start the app with:
-
-```bash
-npm start
-```
-
-Your app should now be running with the message:
-`** Angular Live Development Server is listening on localhost:4200, open your browser on http://localhost:4200/ **`
-
-That's it! Your browser should now resemble our
-[starter-app](https://carbon-angular-starter.netlify.com/).
-
-### Update UI Shell
-
-Let's update the UI Shell so it has a link to the repos page that we will create
-shortly. In `header.component.html` replace the code with:
-
-```html path=src/app/header/header.component.html
-<ibm-header [route]="['/']" name="Carbon Tutorial Angular">
-  <ibm-header-navigation ariaLabel="Carbon Tutorial Angular">
-    <ibm-header-item [route]="['/repos']">Repositories</ibm-header-item>
-  </ibm-header-navigation>
-  <ibm-header-global>
-    <ibm-header-action title="action">
-      <svg icon ibmIconNotification20></svg>
-    </ibm-header-action>
-    <ibm-header-action title="action">
-      <svg icon ibmIconUserAvatar20></svg>
-    </ibm-header-action>
-    <ibm-header-action title="action">
-      <svg icon ibmIconAppSwitcher20></svg>
-    </ibm-header-action>
-  </ibm-header-global>
-</ibm-header>
-```
-
-Before we continue on to the next step, we want to begin developing with a clean
-app. So let's delete the `src/app/starter-home` folder and update the routing in
-`app-routing.module.ts` by removing the below block:
-
-```javascript path=src/app/app-routing.module.ts
-{
-  path: '',
-  loadChildren: () => import('./starter-home/starter-home.module').then(m => m.StarterHomeModule)
-},
-```
-
-From here you can continue the steps in
-[Start from scratch](#start-from-scratch) from [Create pages](#create-pages)
-onwards.
-
-## Start from scratch
-
-<AnchorLinks small>
-
-<AnchorLink>Install Angular CLI</AnchorLink>
-<AnchorLink>Create an Angular App</AnchorLink>
-<AnchorLink>Install Carbon</AnchorLink>
-<AnchorLink>Code style</AnchorLink>
-<AnchorLink>Progressive web app</AnchorLink>
-<AnchorLink>Run the app</AnchorLink>
-<AnchorLink>Add UI Shell</AnchorLink>
-<AnchorLink>Create pages</AnchorLink>
-<AnchorLink>Add routing</AnchorLink>
-<AnchorLink>Submit pull request</AnchorLink>
-
-</AnchorLinks>
-
 ### Install Angular CLI
 
 Since we are starting from scratch, we need to first install Angular CLI.
@@ -269,7 +144,7 @@ directives.
 To create a new Angular project with Angular CLI, just run:
 
 ```bash
-ng new carbon-angular-tutorial --directory ./
+ng new carbon-angular-tutorial
 ```
 
 This will create the new project within the current directory. Make sure you do
@@ -313,394 +188,21 @@ carbon-angular-tutorial
 Even though we installed some dependencies while creating the new app, we've yet
 to install the Carbon packages.
 
-- `carbon-components` - component styles
+- `carbon-components` - Component styles
 - `carbon-components-angular` - Angular components
-- `@carbon/icons-angular` - Angular icons
+- `@carbon/icons` - Carbon icons
 
 ```bash
-npm install carbon-components carbon-components-angular @carbon/icons-angular
+npm install carbon-components carbon-components-angular @carbon/icons
 ```
 
-#### Import carbon-component styles
+#### Import carbon-components styles
 
 In `src/styles.scss`, import the Carbon styles by adding the following to the
 top of the file:
 
 ```scss path=src/styles.scss
 @import '~carbon-components/scss/globals/scss/styles';
-```
-
-### Code style
-
-Next, we will edit the code style to match Carbon Angular recommendations.
-Through the conventions listed in our `tslint.js`, the app will look clean and
-easier to read and maintain. So replace your code in `tslint.json` with the code
-below.
-
-```javascript path=tslint.json
-{
-	"rulesDirectory": [
-    "node_modules/codelyzer"
-	],
-	"rules": {
-		"callable-types": true,
-		"class-name": true,
-		"comment-format": [
-			true,
-			"check-space"
-		],
-		"curly": true,
-		"eofline": true,
-		"forin": true,
-		"import-blacklist": [true],
-		"import-spacing": true,
-		"indent": [
-			true,
-			"tabs",
-			2
-		],
-		"interface-over-type-literal": true,
-		"label-position": true,
-		"max-line-length": [
-			true,
-			140
-		],
-		"member-access": false,
-		"member-ordering": [
-			true,
-			{
-				"order": [
-					"public-static-field",
-					"protected-static-field",
-					"private-static-field",
-					"public-static-method",
-					"protected-static-method",
-					"private-static-method",
-					"public-instance-field",
-					"protected-instance-field",
-					"private-instance-field",
-					"public-constructor",
-					"protected-constructor",
-					"private-constructor",
-					"public-instance-method",
-					"protected-instance-method",
-					"private-instance-method"
-				]
-			}
-		],
-		"no-arg": true,
-		"no-bitwise": true,
-		"no-console": [
-			true,
-			"debug",
-			"info",
-			"time",
-			"timeEnd",
-			"trace"
-		],
-		"no-construct": true,
-		"no-debugger": true,
-		"no-duplicate-variable": true,
-		"no-empty": false,
-		"no-empty-interface": true,
-		"no-eval": true,
-		"no-inferrable-types": [true, "ignore-params"],
-		"no-shadowed-variable": true,
-		"no-string-literal": false,
-		"no-string-throw": true,
-		"no-switch-case-fall-through": true,
-		"no-trailing-whitespace": true,
-		"no-unused-expression": true,
-		"no-use-before-declare": true,
-		"no-var-keyword": true,
-		"object-literal-sort-keys": false,
-		"one-line": [
-			true,
-			"check-open-brace",
-			"check-catch",
-			"check-else",
-			"check-whitespace"
-		],
-		"prefer-const": true,
-		"quotemark": [
-			true,
-			"single"
-		],
-		"radix": true,
-		"semicolon": [
-			true,
-			"always"
-		],
-		"triple-equals": [
-			true,
-			"allow-null-check",
-			"allow-undefined-check"
-		],
-		"typedef-whitespace": [
-			true,
-			{
-				"call-signature": "nospace",
-				"index-signature": "nospace",
-				"parameter": "nospace",
-				"property-declaration": "nospace",
-				"variable-declaration": "nospace"
-			}
-		],
-		"typeof-compare": true,
-		"unified-signatures": true,
-		"variable-name": [
-			true,
-			"ban-keywords",
-			"check-format",
-			"allow-leading-underscore"
-		],
-		"whitespace": [
-			true,
-			"check-branch",
-			"check-decl",
-			"check-operator",
-			"check-module",
-			"check-separator",
-			"check-rest-spread",
-			"check-type",
-			"check-preblock"
-		],
-
-		"directive-selector": [true, "attribute", ["app", "test"], "camelCase"],
-		"component-selector": [true, "element", ["app", "test"], "kebab-case"],
-
-		"no-inputs-metadata-property": true,
-		"no-outputs-metadata-property": true,
-		"no-host-metadata-property": true,
-		"no-attribute-decorator": true,
-		"no-input-rename": true,
-		"no-output-rename": true,
-		"no-forward-ref": true,
-		"use-lifecycle-interface": true,
-		"use-pipe-transform-interface": true,
-
-		"templates-use-public": true,
-		"invoke-injectable": true
-	}
-}
-```
-
-Now that our guidelines are defined, we need to apply them to our app.
-
-```bash
-ng lint --fix
-```
-
-All files should now pass linting. Finally, to help the editor indent lines
-properly in our project and to keep code styles consistent, we need to edit
-`.editorconfig`.
-
-```ini path=.editorconfig
-# Editor configuration, see https://editorconfig.org
-root = true
-
-[*]
-charset = utf-8
-indent_style = tab
-indent_size = 4
-insert_final_newline = true
-trim_trailing_whitespace = true
-
-[*.md]
-max_line_length = off
-trim_trailing_whitespace = false
-```
-
-<InlineNotification>
-
-**Note:** This only works with editors that support editorconfigs.
-
-</InlineNotification>
-
-### Progressive web app
-
-Before we start adding components, let's explore progressive web app, or PWA.
-PWA is a web application that has a set of capabilities (similar to native apps)
-which provide an app-like experience to users. Some other capabilities include
-full responsiveness and browser compatibility, connectivity independence and
-self-updates. In the `src` directory create a file called `sw.js` and paste the
-code below.
-
-For more information on PWAs, check out the
-[developer's documentation](https://developers.google.com/web/progressive-web-apps/).
-
-```javascript path=src/sw.js
-let log = console.log.bind(console);
-let err = console.error.bind(console);
-
-let version = '1';
-let cacheName = 'pwa-client-v' + version;
-let dataCacheName = 'pwa-client-data-v' + version;
-let appShellFilesToCache = [
-  './',
-  './index.html',
-  // "./inline.bundle.js",
-  // "./polyfills.bundle.js",
-  // "./styles.bundle.js",
-  // "./vendor.bundle.js",
-  // "./main.bundle.js",
-  './manifest.json',
-];
-
-self.addEventListener('install', (ev) => {
-  ev.waitUntil(self.skipWaiting());
-  log('Service Worker: Installed');
-
-  ev.waitUntil(
-    caches.open(cacheName).then((cache) => {
-      log('Service Worker: Caching App Shell');
-      return cache.addAll(appShellFilesToCache);
-    })
-  );
-});
-
-self.addEventListener('activate', (ev) => {
-  ev.waitUntil(self.clients.claim());
-  log('Service Worker: Active');
-
-  ev.waitUntil(
-    caches.keys().then((keyList) => {
-      return Promise.all(
-        keyList.map((key) => {
-          if (key !== cacheName) {
-            log('Service Worker: Removing old cache', key);
-            return caches.delete(key);
-          }
-        })
-      );
-    })
-  );
-});
-
-self.addEventListener('fetch', (e) => {
-  log('Service Worker: Fetch URL ', e.request.url);
-
-  // Match requests for data and handle them separately
-  e.respondWith(
-    caches.match(e.request.clone()).then((response) => {
-      return (
-        response ||
-        fetch(e.request.clone()).then((r2) => {
-          return caches.open(dataCacheName).then((cache) => {
-            console.log('Service Worker: Fetched & Cached URL ', e.request.url);
-            cache.put(e.request.url, r2.clone());
-            return r2.clone();
-          });
-        })
-      );
-    })
-  );
-});
-```
-
-Now we need to register our service worker and use it to cache files locally. In
-`index.html` add the below code in a script block using `<script></script>`
-under the `app-root` tag.
-
-<!-- prettier-ignore-start -->
-```html path=src/index.html
-<script>
-// Uncomment the following lines to activate the service worker
-// if (navigator.serviceWorker) {
-//   navigator.serviceWorker.register("sw.js").then(() => {
-//     console.log("Service worker installed");
-//   }, err => {
-//     console.error("Service worker error:", err);
-//   });
-// }
-</script>
-```
-<!-- prettier-ignore-end -->
-
-Next, we need to add the web app manifest. The manifest is a file in `json`
-format that provides the name, description, icon locations and other information
-required for an app to be considered a PWA. It lets users install the web app on
-the home screen just like native apps without going through an app store. Create
-a `manifest.json` in the `src` directory the paste the following code.
-
-```javascript path=src/manifest.json
-{
-  "name": "Carbon Angular Starter",
-  "short_name": "Starter",
-  "icons": [
-    {
-      "src": "/assets/icons/favicon-32x32.png",
-      "sizes": "32x32",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/icons/icon-144x144.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/icons/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "background_color": "#ff00ff",
-  "theme_color": "#ffff00",
-  "display": "standalone",
-  "start_url": "/"
-}
-```
-
-We will also need to add `sw.js` and `manifest.json` into our asset entities
-(build & test) in `angular.json` and reference the `manifest.json` and
-`theme-color` in the `index.html` `<head>` tags. The theme color tells the
-browser with what color to tint UI elements such as the address bar.
-
-```javascript path=angular.json
-"assets": [
-  "src/favicon.ico",
-  "src/assets",
-  "src/sw.js",
-  "src/manifest.json"
-],
-```
-
-```html path=src/index.html
-<link rel="manifest" href="manifest.json" />
-<meta name="theme-color" content="#ffff00" />
-```
-
-Finally, let's download the different sizes of icons to the `src/assets/icons`
-directory by running the following commands:
-
-```bash
-mkdir src/assets/icons
-curl -o src/assets/icons/android-chrome-192x192.png https://raw.githubusercontent.com/carbon-design-system/carbon-angular-starter/master/src/assets/icons/android-chrome-192x192.png
-curl -o src/assets/icons/icon-144x144.png https://raw.githubusercontent.com/carbon-design-system/carbon-angular-starter/master/src/assets/icons/icon-144x144.png
-curl -o src/assets/icons/icon-192x192.png https://raw.githubusercontent.com/carbon-design-system/carbon-angular-starter/master/src/assets/icons/icon-192x192.png
-curl -o src/assets/icons/icon-256x256.png https://raw.githubusercontent.com/carbon-design-system/carbon-angular-starter/master/src/assets/icons/icon-256x256.png
-curl -o src/assets/icons/icon-384x384.png https://raw.githubusercontent.com/carbon-design-system/carbon-angular-starter/master/src/assets/icons/icon-384x384.png
-curl -o src/assets/icons/icon-512x512.png https://raw.githubusercontent.com/carbon-design-system/carbon-angular-starter/master/src/assets/icons/icon-512x512.png
 ```
 
 ### Run the app
@@ -755,7 +257,7 @@ import { AppComponent } from './app.component';
 import { HeaderComponent } from './header/header.component';
 
 // carbon-components-angular default imports
-import { UIShellModule } from 'carbon-components-angular';
+import { UIShellModule, IconModule } from 'carbon-components-angular';
 
 @NgModule({
   declarations: [
@@ -765,7 +267,8 @@ import { UIShellModule } from 'carbon-components-angular';
   imports: [
     BrowserModule,
     AppRoutingModule,
-    UIShellModule
+    UIShellModule,
+    IconModule
   ],
   bootstrap: [AppComponent]
 })
@@ -797,22 +300,32 @@ package.
 
 </InlineNotification>
 
-#### Import icons
+#### Import and register icons
 
-Now let's import the icons from our `@carbon/icons-angular` package. In
-`app.module.ts`, `app.component.spec.ts` and `header.component.spec.ts`, we need
-to import each individual icon we will use.
+Now let's import the icons from our `@carbon/icons` package. In `app.module.ts`,
+`app.component.spec.ts` and `header.component.spec.ts`, we need to import each
+individual icon we will use and register them with the `IconService`
 
 <!-- prettier-ignore-start -->
 ```javascript path=src/app/app.module.ts,src/app/app.component.spec.ts,src/app/header/header.component.spec.ts
-import { NotificationModule } from '@carbon/icons-angular';
-import { UserAvatarModule } from '@carbon/icons-angular';
-import { AppSwitcherModule } from '@carbon/icons-angular';
+import Notification16 from '@carbon/icons/es/notification/16';
+import UserAvatar16 from '@carbon/icons/es/user--avatar/16';
+import AppSwitcher16 from '@carbon/icons/es/app-switcher/16';
 ```
 <!-- prettier-ignore-end -->
 
+In the `AppModule` class we'll add a constructor that provides us with an
+instance of `IconService` and call `registerAll` with an array of the icons we
+need to use.
+
 ```javascript path=src/app/app.module.ts,src/app/app.component.spec.ts,src/app/header/header.component.spec.ts
-imports: [NotificationModule, UserAvatarModule, AppSwitcherModule];
+constructor(protected iconService: IconService) {
+  iconService.registerAll([
+    Notification16,
+    UserAvatar16,
+    AppSwitcher16
+  ]);
+}
 ```
 
 Then we need to add the template code. Populate `header.component.html` with:
@@ -820,23 +333,26 @@ Then we need to add the template code. Populate `header.component.html` with:
 <!-- prettier-ignore-start -->
 ```html path=src/app/header/header.component.html
 <ibm-header name="Carbon Tutorial Angular">
-	<ibm-header-navigation ariaLabel="Carbon Tutorial Angular">
-		<ibm-header-item href="/repos">Repositories</ibm-header-item>
-	</ibm-header-navigation>
-	<ibm-header-global>
-		<ibm-header-action title="action">
-			<svg ibmIconNotification size="20"></svg>
-		</ibm-header-action>
-		<ibm-header-action title="action">
-			<svg ibmIconUserAvatar size="20"></svg>
-		</ibm-header-action>
-		<ibm-header-action title="action">
-			<svg ibmIconAppSwitcher size="20"></svg>
-		</ibm-header-action>
-	</ibm-header-global>
+  <ibm-header-navigation ariaLabel="Carbon Tutorial Angular">
+    <ibm-header-item href="/repos">Repositories</ibm-header-item>
+  </ibm-header-navigation>
+  <ibm-header-global>
+    <ibm-header-action title="action">
+      <svg ibmIcon="notification" size="20"></svg>
+    </ibm-header-action>
+    <ibm-header-action title="action">
+      <svg ibmIcon="user--avatar" size="20"></svg>
+    </ibm-header-action>
+    <ibm-header-action title="action">
+      <svg ibmIcon="app-switcher" size="20"></svg>
+    </ibm-header-action>
+  </ibm-header-global>
 </ibm-header>
 ```
 <!-- prettier-ignore-end -->
+
+Notice that the icon names are the same as their file path. This how the
+directive queries the service for the icon.
 
 Next import the header component in `app.component.spec.ts` and add the
 component in `app.component.html`
@@ -865,7 +381,7 @@ carbon. So in `header.component.ts` lets hostbind that class.
 ```javascript
 import { Component, HostBinding } from '@angular/core';
   ...
-	@HostBinding('class.bx--header') headerClass = true;
+  @HostBinding('class.bx--header') headerClass = true;
 ```
 
 ### Create pages
@@ -1068,8 +584,10 @@ anybody to assist the PR review process.
 
 <InlineNotification>
 
-**Note:** Expect your tutorial step PRs to be reviewed by the Carbon team but
-not merged. We'll close your PR so we can keep the repository's remote branches
-pristine and ready for the next person!
+**Note:** Your tutorial step will be automatically reviewed based on the status
+of your tests. Ensure that your tests pass when you submit your PR. Expect your
+tutorial step PRs to be reviewed by the Carbon team but not merged. We'll close
+your PR so we can keep the repository's remote branches pristine and ready for
+the next person!
 
 </InlineNotification>
