--- a/src/pages/guidelines/content/writing-style.mdx
+++ b/src/pages/guidelines/content/writing-style.mdx
@@ -20,7 +20,7 @@ over long impressive-sounding words. Put the thesaurus away!
 <AnchorLink>Capitalization</AnchorLink>
 <AnchorLink>Simple writing</AnchorLink>
 <AnchorLink>Conversational style</AnchorLink>
-<AnchorLink>Inclusive terminology</AnchorLink>
+<AnchorLink>Inclusive language</AnchorLink>
 <AnchorLink>Pronouns</AnchorLink>
 <AnchorLink>Active and passive voice</AnchorLink>
 
@@ -403,7 +403,7 @@ work, generally go with “might” to avoid confusion with the multiple meaning
   />
 </DoDontRow>
 
-## Inclusive terminology
+## Inclusive language
 
 IBM is committed to eliminating language that supports racial, cultural, or
 gender bias. It is critical that all words used in any capacity in product
