(fix) change button content on Meetups page
**Changed**

Carbon/IDL weekly design playbacks
- Change button label to say "Subscribe" rather than Enroll. People should be subscribing to the series.

--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -40,7 +40,7 @@ along to see other work in progress and learn that way.
   kind="tertiary"
   renderIcon={ArrowRight16}
   href="https://ec.yourlearning.ibm.com/w3/series/10163237">
-  Enroll
+  Subscribe
 </Button>
 
 </Column>
