--- a/src/pages/case-studies/carbon-10-before-and-after.mdx
+++ b/src/pages/case-studies/carbon-10-before-and-after.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Carbon 10: Before and after'
 description:
-  Recently, the IBM Cloud team took on the challenge to achieve visual and UX
+  The IBM Cloud team recently took on the challenge to achieve visual and UX
   consistency across their products by transitioning to Carbon 10. This is their
   journey.
 ---
