--- a/src/pages/case-studies/carbon-10-before-and-after.mdx
+++ b/src/pages/case-studies/carbon-10-before-and-after.mdx
@@ -8,7 +8,7 @@ description:
 
 <PageDescription>
 
-Recently, the IBM Cloud team took on the challenge to achieve visual and UX
+The IBM Cloud team recently took on the challenge to achieve visual and UX
 consistency across their products by transitioning to Carbon 10. This is their
 journey.
 
