--- a/src/pages/case-studies/carbon-10-before-and-after.mdx
+++ b/src/pages/case-studies/carbon-10-before-and-after.mdx
@@ -9,7 +9,7 @@ description:
 <PageDescription>
 
 The IBM Cloud team recently took on the challenge to achieve visual and UX
-consistency across their products by transitioning to Carbon 10. This is their
+consistency across their products by transitioning to Carbon 10. Here are the highlights
 journey.
 
 </PageDescription>
