--- a/src/pages/case-studies/carbon-10-before-and-after.mdx
+++ b/src/pages/case-studies/carbon-10-before-and-after.mdx
@@ -10,7 +10,7 @@ description:
 
 The IBM Cloud team recently took on the challenge to achieve visual and UX
 consistency across their products by transitioning to Carbon 10. Here are the highlights
-journey.
+of their journey.
 
 </PageDescription>
 
