--- a/src/pages/case-studies/carbon-10-before-and-after.mdx
+++ b/src/pages/case-studies/carbon-10-before-and-after.mdx
@@ -28,7 +28,7 @@ of their journey.
 
 ## Overview
 
-With support from senior leadership, the Cloud PAL team facilitated the
+With support from senior leadership, the IBM Cloud PAL team facilitated the
 transition from Carbon 9 to Carbon 10 for all IBM Cloud services. While this
 effort was led by the Cloud PAL team, they involved the Cloud community,
 starting with a Design Jam and a visual design guild. The transition was split
