--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -194,13 +194,13 @@ breakpoint on up. See the auto-layout columns for more on this.
 
 ### Responsive options
 
-| Breakpoints     | Class prefix    | # of cols | Gutter width\* |
-| --------------- | --------------- | --------- | -------------- |
-| Small (<320)    | `.bx--col-sm-`  | 4         | 32px           |
-| Medium (≥672)   | `.bx--col-md-`  | 8         | 32px           |
-| Large (≥1056)   | `.bx--col-lg-`  | 16        | 32px           |
-| X-Large (≥1312) | `.bx--col-xlg-` | 16        | 32px           |
-| Max (≥1584)     | `.bx--col-max-` | 16        | 32px           |
+| Breakpoints             | Class prefix    | # of cols | Gutter width\* |
+| ----------------------- | --------------- | --------- | -------------- |
+| Small (<672)            | `.bx--col-sm-`  | 4         | 32px           |
+| Medium (672 - 1056px)   | `.bx--col-md-`  | 8         | 32px           |
+| Large (1056 - 1312px)   | `.bx--col-lg-`  | 16        | 32px           |
+| X-Large (1312 - 1584px) | `.bx--col-xlg-` | 16        | 32px           |
+| Max (>1584)             | `.bx--col-max-` | 16        | 32px           |
 
 <Caption>
   * Gutter width is 32px — with 16px on each side of a column — at every
