docs: domain guidance updates

--- a/src/pages/community/domain-guidance.mdx
+++ b/src/pages/community/domain-guidance.mdx
@@ -1,37 +1,26 @@
 ---
 title: Domain guidance
 description:
-  These sites include guidance and resources for IBM product teams. Some of the
-  guidance is accessible to IBMers only.
+  These sites include guidance, assets, and resources for all of IBM's digital
+  experiences from product to website. Some guidance is accessible to IBMers
+  only.
 ---
 
 <PageDescription>
 
-These sites include guidance and resources for IBM product teams. Some of the
-guidance is accessible to IBMers only.
+These sites include guidance, assets, and resources for all of IBM's digital
+experiences from product to website. Some guidance is accessible to IBMers only.
 
 </PageDescription>
 
-## Digital experience guidance
+<AnchorLinks>
+  <AnchorLink>Product</AnchorLink>
+  <AnchorLink>IBM.com</AnchorLink>
+  <AnchorLink>Brand</AnchorLink>
+  <AnchorLink>Conversational UX</AnchorLink>
+</AnchorLinks>
 
-The guidance and resources here have been developed for IBM teams building
-digital experiences for the IBM.com site.
-
-<Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon for IBM.com"
-    href="https://www.ibm.com/standards/web/carbon-for-ibm-dotcom/"
-    >
-
-![Bee icon](images/bee.svg)
-
-  </ResourceCard>
-
-</Column>
-</Row>
-
-## Product-specific guidance
+## Product
 
 The guidance and resources here are for IBM product teams building software
 applications and digital experiences with the Carbon Design System. This work is
@@ -41,6 +30,17 @@ and use cases.
 _This content is accessible to IBMers only._
 
 <Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="AI Applications Design"
+    href="https://pages.github.ibm.com/ai-applications/design/"
+    >
+
+![IoT icon](images/watson.svg)
+
+  </ResourceCard>
+
+</Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="Carbon for Cloud & Cognitive"
@@ -73,26 +73,68 @@ _This content is accessible to IBMers only._
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="AI Applications Design"
-    href="https://pages.github.ibm.com/ai-applications/design/"
+    subTitle="Watson Moments"
+    href="https://pages.github.ibm.com/data-and-ai/watson-moments/"
     >
 
-![IoT icon](images/watson.svg)
+![Pattern icon](images/watson.svg)
+
+  </ResourceCard>
+</Column>
+</Row>
+
+## IBM.com
+
+The guidance and resources here have been developed for IBM teams building
+digital experiences for the IBM.com site.
+
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Carbon for IBM.com"
+    href="https://www.ibm.com/standards/web/carbon-for-ibm-dotcom/"
+    >
+
+![Bee icon](images/bee.svg)
 
   </ResourceCard>
 
 </Column>
 </Row>
 
-## Brand guidance
+## Brand
 
-The IBM brand systems have been developed for various IBM businesses, audiences,
-categories, and offerings. Read them to understand the rationale behind every
-visual and verbal detail, so that the guidance may inform your work.
+The journey to understand IBM brand guidance begins with the foundations in the
+Brand Center, then extends to the expression of brand as documented in the IBM
+Design Language (IDL) site. From there, go to the IBM Brand Systems for visual
+systems and guidance tailored to our hero brands, category brands, and
+offerings.
 
 _This content is accessible to IBMers only._
 
 <Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="IBM Brand Center"
+    href="https://www.ibm.com/brand/"
+    >
+
+![Bee icon](images/bee.svg)
+
+  </ResourceCard>
+
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="IBM Design Language"
+    href="https://www.ibm.com/design/language/"
+    >
+
+![Bee icon](images/bee.svg)
+
+  </ResourceCard>
+
+</Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="IBM Brand Systems"
@@ -100,6 +142,28 @@ _This content is accessible to IBMers only._
     >
 
 ![Bee icon](images/bee.svg)
+
+  </ResourceCard>
+
+</Column>
+</Row>
+
+## Conversational UX
+
+The IBM Natural Conversation Framework is for anyone designing or building
+conversational agents. It provides design principles, interaction patterns, and
+working code for the basic mechanics of natural conversation.
+
+_This content is accessible to IBMers only._
+
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="IBM Natural Conversation Framework"
+    href="https://alma.dal1a.ciocloud.nonprod.intranet.ibm.com/"
+    >
+
+![Chatbot icon](images/chat-bot.svg)
 
   </ResourceCard>
 
