--- a/src/pages/guidelines/pictograms/usage.mdx
+++ b/src/pages/guidelines/pictograms/usage.mdx
@@ -38,7 +38,7 @@ become an elegant addition to the IBM experience.
       href="sketch://add-library/cloud/nwqmk"
       >
 
-![Sketch icon](/images/SketchIcon.svg)
+![Sketch icon](../../../images/resource-cards/sketch.svg)
 
   </ResourceCard>
 </Column>
