Fix broken link to heat maps section
On advanced charts page we currently use a relative path that resolves in a 404. Since heat maps are part of this page now, we can point straight to that section.

--- a/src/pages/data-visualization/advanced-charts/index.mdx
+++ b/src/pages/data-visualization/advanced-charts/index.mdx
@@ -294,7 +294,7 @@ hierarchical structure of a tree map. Each rectangle has an area proportional to
 a specified dimension of the data, but the rectangles can also be colored
 independently according to an additional indicator.
 
-As with [heat maps](../data-visualization/advanced-charts#heat-maps), the
+As with [heat maps](#heat-maps), the
 diverging palette shows color progression in either direction from an inflection
 point (for example, a 0 value midway between -10 and +10). In the example below,
 the inflection point is simply an average. Tourism can be mapped by the number
