--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -111,6 +111,19 @@ building websites and user interfaces.
 <Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
     color="dark"
+    title="The new Gatsby theme Sketch kit has arrived!"
+    author="Diana Stanciulescu"
+    date="April 1, 2021"
+    href="./designing/design-resources/#gatsby-theme-sketch-kit"
+    >
+
+![Gatsby theme announcement](./homepage/images/gatsby_announcement.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    color="dark"
     title="What’s coming to Carbon in 2021"
     author="Josh Black"
     date="November 12, 2020"
@@ -132,19 +145,6 @@ building websites and user interfaces.
     >
 
 ![Color palettes and accessibility for data viz](./homepage/images/2020_dataviz.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    color="dark"
-    title="Hacktoberfest 2020 is here"
-    author="Scott Strubberg"
-    date="October 1, 2020"
-    href="https://medium.com/carbondesign/hacktoberfest-2020-is-here-2638d4f2c05 "
-    >
-
-![Hacktoberfest 2020](./homepage/images/2020_hacktoberfest.png)
 
 </ArticleCard>
 </Column>
