--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -22,6 +22,18 @@ about design systems.
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
+    title="The new Gatsby theme Sketch kit has arrived!"
+    author="Diana Stanciulescu"
+    date="April 1, 2021"
+    href="/designing/design-resources/#gatsby-theme-sketch-kit"
+    >
+
+![Gatsby theme announcement](/images/gatsby_announcement.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
     title="What’s coming to Carbon in 2021"
     author="Josh Black"
     date="November 12, 2020"
