--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -103,6 +103,15 @@ building websites and user interfaces.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    color="dark"
+    subTitle="Carbon Svelte components"
+    href="https://github.com/IBM/carbon-components-svelte"
+    >
+    <MdxIcon name="github" color="inverse" />
+  </ResourceCard>
+</Column>
 </Row>
 
 ### Latest news and articles
