--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -70,6 +70,14 @@ your framework of choice.
     <MdxIcon name="github" />
   </ResourceCard>
 </Column>
+
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    subTitle="Carbon Web Components"
+    href="https://github.com/carbon-design-system/carbon-web-components">
+    <MdxIcon name="github" />
+  </ResourceCard>
+</Column>
 </Row>
 
 ### Storybooks
@@ -102,6 +110,17 @@ your framework of choice.
       >
 
 <MdxIcon name="vue" />
+
+  </ResourceCard>
+</Column>
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Carbon Web Components Storybook"
+      href="http://web-components.carbondesignsystem.com/"
+      >
+
+<MdxIcon name="webcomponents" />
 
   </ResourceCard>
 </Column>
