--- a/src/pages/developing/frameworks/other-frameworks.mdx
+++ b/src/pages/developing/frameworks/other-frameworks.mdx
@@ -2,15 +2,25 @@
 title: Frameworks
 description:
   The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, and Svelte.
-tabs: ['React', 'Vanilla', 'Angular', 'Vue', 'Svelte', 'Other frameworks']
+  the system in vanilla JS, Angular, Vue, Svelte, and Web Components.
+tabs:
+  [
+    'React',
+    'Vanilla',
+    'Angular',
+    'Vue',
+    'Svelte',
+    'Web Components',
+    'Other frameworks',
+  ]
 ---
 
 <PageDescription>
 
 The Carbon Design System is built React first. We also support core parts of the
-system in vanilla JS, Angular, Vue, and Svelte. If you’re using a different
-framework, you can still build components by following the guidelines below.
+system in vanilla JS, Angular, Vue, Svelte, and Web Components. If you’re using
+a different framework, you can still build components by following the
+guidelines below.
 
 </PageDescription>
 
