--- a/src/pages/developing/get-started.mdx
+++ b/src/pages/developing/get-started.mdx
@@ -101,6 +101,7 @@ question to you and will jump in to help you out.
 - [#carbon-react](https://ibm-studios.slack.com/archives/C2K6RFJ1G)
 - [#carbon-ng](https://ibm-studios.slack.com/archives/CBZC0LM2N)
 - [#carbon-vue](https://ibm-studios.slack.com/archives/CAM5P6NR1)
+- [#carbon-web-components](https://ibm-studios.slack.com/archives/CL83LMKSA)
 - [#carbon-tutorial](https://ibm-studios.slack.com/archives/CJUGA7P6H)
 
 And be sure to sign up for the latest Carbon news at
