--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -112,6 +112,16 @@ building websites and user interfaces.
     <MdxIcon name="github" color="inverse" />
   </ResourceCard>
 </Column>
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    color="dark"
+    subTitle="Carbon Web Components"
+    href="https://github.com/carbon-design-system/carbon-web-components"
+    >
+    <MdxIcon name="github" color="inverse" />
+  </ResourceCard>
+</Column>
 </Row>
 
 ### Latest news and articles
