--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -210,7 +210,7 @@ patterns and examples, and get started with either the Light or Dark theme.
   <ResourceCard
     subTitle="Light theme for mobile"
     href="sketch://add-library/cloud/s/a3343128-adb6-489c-9e62-709d89ba76e9"
-    actionIcon="launch">
+    actionIcon="download">
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
