--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -218,7 +218,7 @@ patterns and examples, and get started with either the Light or Dark theme.
   <ResourceCard
     subTitle="Dark theme for mobile"
     href="sketch://add-library/cloud/s/1f59f590-6915-47b0-bf06-6fd66209b3b3"
-    actionIcon="launch">
+    actionIcon="download">
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
