--- a/src/pages/case-studies/carbon-10-before-and-after.mdx
+++ b/src/pages/case-studies/carbon-10-before-and-after.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Carbon 10: Before and after'
+title: 'Consistency in the Cloud'
 description:
   The IBM Cloud team recently took on the challenge to achieve visual and UX
   consistency across their products by transitioning to Carbon 10. Here are the
