--- a/src/pages/case-studies/consistency-in-the-cloud.mdx
+++ b/src/pages/case-studies/consistency-in-the-cloud.mdx
@@ -60,13 +60,12 @@ Platform Integration Experiences team to create a Pattern and Asset Library
 (PAL) that was specific to Cloud services. Because they were transitioning so
 many services, IBM Cloud was able to create a dedicated, cross-functional team
 that was solely focused on supporting the transition to Carbon 10 and the
-creation of Cloud-specific assets and resources. 
+creation of Cloud-specific assets and resources.
 
-Rather than the project being
-grassroots and trying to convince every single team to participate, the
-transition started from the top. The IBM Cloud VP of Design, Arin Bhowmick, and
-Director of Design, Bill Grady, made the case for the effort and mandated that
-Cloud teams participate.
+Rather than the project being grassroots and trying to convince every single
+team to participate, the transition started from the top. The IBM Cloud VP of
+Design, Arin Bhowmick, and Director of Design, Bill Grady, made the case for the
+effort and mandated that Cloud teams participate.
 
 Creating a PAL and getting the hundreds of Cloud services to adopt both Carbon
 10 and Cloud PAL needed a specific dedicated team with a project plan. While the
