--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -121,15 +121,6 @@ You'll find even more guidance and assets in this file than on the site.
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon mobile Sketch kit"
-    href="https://www.sketch.com/s/a3343128-adb6-489c-9e62-709d89ba76e9"
-    actionIcon="launch">
-    <MdxIcon name="sketch" />
-  </ResourceCard>
-</Column>
-
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
     subTitle="UI Shell template"
     href="https://www.sketch.com/s/6a8e1d7b-f00a-4d8d-9d83-79ecf4dc12a0"
     actionIcon="launch">
@@ -167,7 +158,7 @@ for PAL sites or any other sites using the Gatsby theme.
   <ResourceCard
     subTitle="Gatsby theme Sketch kit"
     href="sketch://add-library/cloud/304313c1-29a8-4946-a6f0-51dbec953bc2"
-    actionIcon="launch">
+    actionIcon="download">
     <MdxIcon name="sketch" />
   </ResourceCard>
 </Column>
