--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -17,7 +17,7 @@ tabs:
 
 <PageDescription>
 
-The library provides front-end developers & engineers a collection of reusable
+The library provides front-end developers and engineers a collection of reusable
 Web Components to build websites and user interfaces. Adopting the library
 enables developers to use consistent markup, styles, and behavior in prototype
 and production work.
