--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -81,7 +81,7 @@ Our example at [CodeSandbox](https://codesandbox.io) shows the most basic usage:
 
 The first thing you need is **setting up a module bundler** to resolve
 ECMAScript `import`s. Above example uses [Webpack](https://webpack.js.org). You
-can use other bundlers like [Rollup](https://rollupjs.org/), too.
+can use other bundlers like [Rollup](https://rollupjs.org/) too.
 
 Once you set up a module bundler, you can start importing our component modules,
 like:
