--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -92,7 +92,7 @@ import 'carbon-web-components/es/components/dropdown/dropdown-item.js';
 ```
 
 Once you do that, you can use our components in the same manner as native HTML
-tags, like:
+tags, for example:
 
 ```html
 <bx-dropdown trigger-content="Select an item">
