--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -104,7 +104,7 @@ tags, for example:
 </bx-dropdown>
 ```
 
-If you just want to try our components for demonstrations, etc., you can use
+If you just want to try our components for demonstrations and so on, you can use
 CDNs that support module mapping (e.g. [JSPM](https://jspm.org)). With it, you
 can just import our modules in `<script type="module">`:
 
