--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -105,7 +105,7 @@ tags, for example:
 ```
 
 If you just want to try our components for demonstrations and so on, you can use
-CDNs that support module mapping (e.g. [JSPM](https://jspm.org)). With it, you
+CDNs that support module mapping (for example, [JSPM](https://jspm.org)). With it, you
 can just import our modules in `<script type="module">`:
 
 ```html
