--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -84,7 +84,7 @@ ECMAScript `import`s. Above example uses [Webpack](https://webpack.js.org). You
 can use other bundlers like [Rollup](https://rollupjs.org/) too.
 
 Once you set up a module bundler, you can start importing our component modules,
-like:
+for example:
 
 ```javascript
 import 'carbon-web-components/es/components/dropdown/dropdown.js';
