docs(web-components): added section for framework wrappers

--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -146,12 +146,25 @@ can just import our modules in `<script type="module">`:
 ### List of available components
 
 View available Web Components
-[here](http://web-components.carbondesignsystem.com). Usage information is
+[here](https://web-components.carbondesignsystem.com). Usage information is
 available in the notes provided with each story.
+
+### Framework wrappers
+
+In addition to the available Web Component versions of Carbon components, this
+library also includes framework wrappers for Angular, React, and Vue if the
+desire is to use instead of the pure framework versions of Carbon components.
+This is achievable since Web Components is the modern browser standard, and
+works well with other front-end frameworks that exist in the application, and
+comes with the benefits of the encapsulation of the Shadow DOM:
+
+- [Angular wrapper for Carbon Web Components](https://web-components.carbondesignsystem.com/angular/index.html)
+- [React wrapper for Carbon Web Components](https://web-components.carbondesignsystem.com/react/index.html)
+- [Vue wrapper for Carbon Web Components](https://web-components.carbondesignsystem.com/vue/index.html)
 
 ## Troubleshooting
 
-If you experience any issues while getting set up with Carbon Components Vue,
+If you experience any issues while getting set up with Carbon Web Components,
 please head over to the
 [GitHub repo](https://github.com/carbon-design-system/carbon-web-components) for
 more guidelines and support. Please
