docs(web-components): fix to run-on sentence

--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -105,8 +105,8 @@ tags, for example:
 ```
 
 If you just want to try our components for demonstrations and so on, you can use
-CDNs that support module mapping (for example, [JSPM](https://jspm.org)). With it, you
-can import just our modules in `<script type="module">`:
+CDNs that support module mapping (for example, [JSPM](https://jspm.org)). With
+it, you can import just our modules in `<script type="module">`:
 
 ```html
 <!DOCTYPE html>
@@ -155,8 +155,9 @@ In addition to the available Web Component versions of Carbon components, this
 library also includes framework wrappers for Angular, React, and Vue if the
 desire is to use instead of the pure framework versions of Carbon components.
 This is achievable since Web Components is the modern browser standard, and
-works well with other front-end frameworks that exist in the application, and
-comes with the benefits of the encapsulation of the Shadow DOM:
+works well with other front-end frameworks that exist in the application. In
+turn, this also comes with the benefits of the encapsulation within the Shadow
+DOM:
 
 - [Angular wrapper for Carbon Web Components](https://web-components.carbondesignsystem.com/angular/index.html)
 - [React wrapper for Carbon Web Components](https://web-components.carbondesignsystem.com/react/index.html)
