docs(web-components): another small sentence fix

--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -156,8 +156,7 @@ library also includes framework wrappers for Angular, React, and Vue if the
 desire is to use instead of the pure framework versions of Carbon components.
 This is achievable since Web Components is the modern browser standard, and
 works well with other front-end frameworks that exist in the application. In
-turn, this also comes with the benefits of the encapsulation within the Shadow
-DOM:
+turn, this also comes with the benefits of encapsulation within the Shadow DOM:
 
 - [Angular wrapper for Carbon Web Components](https://web-components.carbondesignsystem.com/angular/index.html)
 - [React wrapper for Carbon Web Components](https://web-components.carbondesignsystem.com/react/index.html)
