--- a/src/pages/developing/frameworks/other-frameworks.mdx
+++ b/src/pages/developing/frameworks/other-frameworks.mdx
@@ -2,7 +2,7 @@
 title: Frameworks
 description:
   The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, Svelte, and Web Components.
+  the system in vanilla JS, Angular, Vue, Svelte, and web components.
 tabs:
   [
     'React',
@@ -18,7 +18,7 @@ tabs:
 <PageDescription>
 
 The Carbon Design System is built React first. We also support core parts of the
-system in vanilla JS, Angular, Vue, Svelte, and Web Components. If you’re using
+system in vanilla JS, Angular, Vue, Svelte, and web components. If you’re using
 a different framework, you can still build components by following the
 guidelines below.
 
@@ -51,7 +51,7 @@ there are no zombie event handlers.
 
 The easiest way to hook on the creation/destruction of DOM elements is by
 defining a "wrapping component", with the JavaScript framework of your choice.
-Here's an example using Web Components'
+Here's an example using web components'
 [Custom Elements v1 spec](https://developer.mozilla.org/en-US/docs/Web/Web_Components/Custom_Elements),
 but the notion of components, along with the lifecycle callbacks, are commonly
 found in many other JavaScript frameworks.
