--- a/src/pages/developing/frameworks/react.mdx
+++ b/src/pages/developing/frameworks/react.mdx
@@ -2,7 +2,7 @@
 title: Frameworks
 description:
   The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, Svelte, and Web Components.
+  the system in vanilla JS, Angular, Vue, Svelte, and web components.
 tabs:
   [
     'React',
