--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -2,7 +2,7 @@
 title: Frameworks
 description:
   The Carbon Design System is built React first. We also support core parts of
-  the system in vanilla JS, Angular, Vue, Svelte, and Web Components.
+  the system in vanilla JS, Angular, Vue, Svelte, and web components.
 tabs:
   [
     'React',
@@ -18,7 +18,7 @@ tabs:
 <PageDescription>
 
 The library provides front-end developers and engineers a collection of reusable
-Web Components to build websites and user interfaces. Adopting the library
+web components to build websites and user interfaces. Adopting the library
 enables developers to use consistent markup, styles, and behavior in prototype
 and production work.
 
@@ -28,7 +28,7 @@ This library uses Custom Elements v1 and Shadow DOM v1 specs.
 
 <InlineNotification>
 
-The Web Components library is maintained by members of the Carbon community. For
+The web components library is maintained by members of the Carbon community. For
 support, contact the
 [Carbon Web Components team](https://github.com/carbon-design-system/carbon-web-components/issues/new/choose).
 
@@ -49,7 +49,7 @@ support, contact the
 </Column>
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
-      subTitle="Try Web Components with CodeSandbox"
+      subTitle="Try web components with CodeSandbox"
       href="https://codesandbox.io/s/github/carbon-design-system/carbon-web-components/tree/master/examples/codesandbox/basic"
     >
       <MdxIcon name="codesandbox" />
@@ -145,7 +145,7 @@ it, you can import just our modules in `<script type="module">`:
 
 ### List of available components
 
-View available Web Components
+View available web components
 [here](https://web-components.carbondesignsystem.com). Usage information is
 available in the notes provided with each story.
 
@@ -154,7 +154,7 @@ available in the notes provided with each story.
 In addition to the available Web Component versions of Carbon components, this
 library also includes framework wrappers for Angular, React, and Vue if the
 desire is to use instead of the pure framework versions of Carbon components.
-This is achievable since Web Components is the modern browser standard, and
+This is achievable since web components is the modern browser standard, and
 works well with other front-end frameworks that exist in the application. In
 turn, this also comes with the benefits of encapsulation within the Shadow DOM:
 
